2004-07-16  WATANABE Katsuyuki <knabe@sannet.ne.jp>

	* [w3m-dev 04093] bookmark charset
	* add global variable: BookmarkCharset.
	* main.c:adBmark(): remove condition LANG = JA.
	* main.c: buffername encode by BookmarkCharset when add bookmark.
	* main.c: BookmarkCharset pass to w3mbookmark.
	* w3mbookmark.c: ditto.

2004-07-16  WATANABE Katsuyuki <knabe@sannet.ne.jp>

	* [w3m-dev 04092] remove __CYGWIN__ && LANG == JA
	* remove condition LANG == JA && __CYGWIN__
	* cygwin_mouse_btn_swapped enabled when before 1.5.x 

2004-07-16  WATANABE Katsuyuki <knabe@sannet.ne.jp>

	* [w3m-dev 04091] option panel: gettextize select list
	* rc.c: gettextize option select list.
	* rc.c: add gettextize message.
	* po/w3m.pot: ditto.
	* po/ja.po: ditto.

2004-07-14  Fumitoshi UKAI  <ukai@debian.or.jp>

	* Debian Bug#259053
	* doc/FAQ.html, doc-jp/FAQ.html: ~/.mailcap -> ~/.w3m/mailcap

2004-05-11  Fumitoshi UKAI  <ukai@debian.or.jp>

	* based on [w3m-dev 04079]
	  SAKAI Kiyotaka <ksakai@kso.netwk.ntt-at.co.jp>
	* Makefile.in: (libwc/libwc.a): always make in libwc subdir
		(w3mimg/w3mimg.a): always make in w3mimg subdir

2004-05-03  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev-en 01007]
	* libwc/Makefile.in (CFLAGS): need @CPPFLAGS@

2004-05-03  Fumitoshi UKAI  <ukai@debian.or.jp>

	* version.c.in: cvs version

2004-04-29  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3m 0.5.1
	* version.c.in: update
	* doc/README: version 0.5, release date, maintainer
	* doc-jp/README: ditto
	* NEWS: update
	* configure.in: version 0.5.1
	* po/w3m.pot, ja.po: update-po

2004-04-27  SAKAI Kiyotaka <ksakai@kso.netwk.ntt-at.co.jp>

	* [w3m-dev 04068] install-sh problem
	 [w3m-dev 04069] install-sh problem 2
	* Makefile.in (MAKE_ARGS): delete INSTALL
	* install-sh: replace with X Consortium install-sh (from automake)

2004-04-27  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 04073] Re: run configure in another directory
	* Makefile.in (CFLAGS): include dir here
		(DEFS): delete include dirs